--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -33,7 +33,9 @@
     "paths": {
       "@ports/*": ["ports/*"],
       "@domain/*": ["domain/*"],
-      "@adapters/*": ["adapters/*"]
+      "@adapters/*": ["adapters/*"],
+      "@config/*": ["config/*"],
+      "@services/*": ["services/*"]
     },                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
